# pruebas_rust

./: README.md
BACKEND/: .env.example  Cargo.toml  README.md
BACKEND/src/: config.rs  error.rs  main.rs  routes.rs  state.rs
BACKEND/src/middleware/: logging.rs
BACKEND/src/modules/controllers/: admin.rs  bank.rs  convert.rs  health.rs  mod.rs  reputation.rs  wallet.rs
BACKEND/src/modules/models/: bank.rs  convert.rs  mod.rs  reputation.rs  transaction.rs  wallet.rs
BACKEND/src/modules/repositories/: bank_transfer_repo.rs  mod.rs  transaction_repo.rs  wallet_repo.rs
BACKEND/src/modules/services/: aa_service.rs  bank_service.rs  convert_service.rs  mod.rs  reputation_service.rs  stellar_service.rs  wallet_service.rs
BACKEND/src/utils/: crypto.rs  mod.rs  stellar_client.rs
