[package]
name = "wallet-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Stellar SDK (verificar disponibilidad, fallback a HTTP directo si no compila)
stellar_sdk = { version = "0.0.1", optional = true }

# Cryptography for Stellar keypairs
ed25519-dalek = "2.1"
sha2 = "0.10"
base32 = "0.4"
hex = "0.4"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[features]
default = []
stellar-sdk-support = ["stellar_sdk"]